# vld-cmake

./: CMakeLists.txt  README.md
lib/Win32/: vld_x86.lib
lib/Win64/: vld_x64.lib
src/exe/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/impl/: vld_wrapper.cpp
src/lib/impl/synyi/vld/: vld_ex.cpp
src/lib/include/: vld_wrapper.h
src/lib/include/synyi/vld/: vld_ex.h
